Fix overflow

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -16,11 +16,11 @@ html, body, #root, .App {
   border-bottom: 5px solid black;
   background-color: #BBB;
   padding: 30px;
-  height: 10%;
+  height: 18%;
 }
 
 #canvas {
-  height: 90%;
+  min-height: 82%;
   width: 100%;
 }
 
